# codewars-solutions

Haskell/: bouncing-balls.hs  build-a-pile-of-cubes.hs  catching-car-mileage-numbers.hs  church-numbers-add-multiply-exponents.hs  count-ones-in-a-segment.hs  create-phone-number.hs  cut-the-cake.hs  decode-the-morse-code-advanced.hs  decode-the-morse-code.hs  esolang-interpreters-number-2-custom-smallfuck-interpreter.hs  find-the-missing-letter.hs  find-the-missing-term-in-an-arithmetic-progression.hs  fold-an-array.hs  human-readable-duration-format.hs  human-readable-time.hs  i-love-lisp.hs  (+19 more)
Rust/: Cargo.toml
Rust/break-camelcase/: Cargo.toml
Rust/break-camelcase/src/: main.rs
Rust/build-a-pile-of-cubes/: Cargo.toml
Rust/build-a-pile-of-cubes/src/: main.rs
Rust/build-tower/: Cargo.toml
Rust/build-tower/src/: main.rs
Rust/counting-duplicates/: Cargo.toml
Rust/counting-duplicates/src/: main.rs
Rust/find-the-divisors/: Cargo.toml
Rust/find-the-divisors/src/: main.rs
Rust/find-the-parity-outlier/src/: main.rs
Rust/mumbling/src/: main.rs
Rust/regex-validate-pin-code/: Cargo.toml
Rust/regex-validate-pin-code/src/: main.rs
Rust/rot-13/: Cargo.toml
Rust/rot-13/src/: main.rs
Rust/square-every-digit/: Cargo.toml
Rust/square-every-digit/src/: main.rs
Rust/stop-gninnips-my-sdrow/: Cargo.toml
Rust/stop-gninnips-my-sdrow/src/: main.rs
Rust/string-ends-with/: Cargo.toml
Rust/string-ends-with/src/: main.rs
Rust/sum-of-digits-digital-root/: Cargo.toml
Rust/sum-of-digits-digital-root/src/: main.rs
Rust/valid-parentheses/src/: main.rs
(+8 files in other folders)
