[workspace]

members = [
    "stop-gninnips-my-sdrow",
    "find-the-divisors",
    "square-every-digit",
    "regex-validate-pin-code",
    "mumbling",
    "string-ends-with",
    "sum-of-digits-digital-root",
    "counting-duplicates",
    "build-tower",
    "break-camelcase",
    "valid-parentheses",
    "rot-13",
    "find-the-parity-outlier",
    "build-a-pile-of-cubes"
]
